--- a/maven-samples/single-module/pom.xml
+++ b/maven-samples/single-module/pom.xml
@@ -37,6 +37,23 @@
         </configuration>
       </plugin>
 
+  <plugin> 
+        <!-- Building an executable jar -->
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.6.3</version>
+      <configuration>
+        <archive>
+          <manifest>
+
+          <!-- give full qualified name of your main class-->
+            <mainClass>com.example</mainClass>
+
+          </manifest>
+        </archive>
+      </configuration>
+    </plugin>
+
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.2.1</version>
