--- a/maven-samples/single-module/pom.xml
+++ b/maven-samples/single-module/pom.xml
@@ -47,7 +47,7 @@
           <manifest>
 
           <!-- give full qualified name of your main class-->
-            <mainClass>com.example</mainClass>
+            <mainClass>Greeter</mainClass>
 
           </manifest>
         </archive>
